TFP-4097: Flytter kode_endring_linje til Valuetype. (#2071)